# wasteland

./: .bazelignore  .bazelrc  .gitignore  BUILD  BUILD.bazel  MODULE.bazel  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json5  resolved.bzl
.github/workflows/: ci.bazelrc  main.yml
code-challenges/advent-of-code/2022/day1/: BUILD  BUILD.bazel  README.md  solution.go  solution_test.go
code-challenges/advent-of-code/2022/day10/: BUILD  BUILD.bazel  README.md  solution.go  solution_test.go
code-challenges/advent-of-code/2022/day11/: BUILD  BUILD.bazel  README.md  solution.go  solution_test.go
code-challenges/advent-of-code/2022/day12/: BUILD  BUILD.bazel  README.md  solution.go  solution_test.go
code-challenges/advent-of-code/2022/day2/: BUILD  BUILD.bazel  README.md  solution.go  solution_test.go
code-challenges/advent-of-code/2022/day3/: BUILD  BUILD.bazel  README.md  solution.go  solution_test.go
code-challenges/advent-of-code/2022/day4/: BUILD  BUILD.bazel  README.md  solution.go  solution_test.go
code-challenges/advent-of-code/2022/day5/: BUILD  BUILD.bazel  README.md  solution.go  solution_test.go
code-challenges/advent-of-code/2022/day6/: BUILD  BUILD.bazel  README.md  solution.go  solution_test.go
code-challenges/advent-of-code/2022/day7/: BUILD  BUILD.bazel  README.md  solution.go  solution_test.go
code-challenges/advent-of-code/2022/day8/: BUILD  BUILD.bazel  README.md  solution.go  solution_test.go
code-challenges/advent-of-code/2022/day9/: BUILD  BUILD.bazel  README.md  solution.go  solution_test.go
javascript/web/50-projects-in-50-days/: BUILD.bazel  jest.config.js  package.json
javascript/web/50-projects-in-50-days/pages/: BUILD.bazel
javascript/web/50-projects-in-50-days/pages/api/: BUILD.bazel
javascript/web/50-projects-in-50-days/public/: BUILD.bazel
javascript/web/50-projects-in-50-days/styles/: BUILD.bazel
