load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "day10",
    srcs = ["solution.go"],
    importpath = "github.com/tharakadesilva/wasteland/code-challenges/advent-of-code/2022/day10",
    visibility = ["//visibility:public"],
)

go_test(
    name = "day10_test",
    srcs = ["solution_test.go"],
    data = glob(["testdata/**"]),
    embed = [":day10"],
)
