load("@aspect_rules_jest//jest:defs.bzl", "jest_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//javascript/web/50-projects-in-50-days:eslint/package_json.bzl", eslint_bin = "bin")

SRCS = [
    "_app.tsx",
    "index.tsx",
]

SPECS = [
    "index.test.tsx",
]

ts_project(
    name = "pages",
    srcs = SRCS,
    declaration = True,
    resolve_json_module = True,
    transpiler = "tsc",
    tsconfig = "//javascript/web/50-projects-in-50-days:tsconfig",
    visibility = ["//javascript/web/50-projects-in-50-days:__subpackages__"],
    deps = [
        "//javascript/web/50-projects-in-50-days:node_modules/@bazel-example/one",
        "//javascript/web/50-projects-in-50-days:node_modules/@types/is-even",
        "//javascript/web/50-projects-in-50-days:node_modules/@types/react",
        "//javascript/web/50-projects-in-50-days:node_modules/@types/react-dom",
        "//javascript/web/50-projects-in-50-days:node_modules/next",
        "//javascript/web/50-projects-in-50-days/pages/api",
    ],
)

ts_project(
    name = "specs",
    srcs = SPECS,
    declaration = True,
    resolve_json_module = True,
    transpiler = "tsc",
    tsconfig = "//javascript/web/50-projects-in-50-days:tsconfig",
    deps = [
        "//javascript/web/50-projects-in-50-days:node_modules/@testing-library/jest-dom",
        "//javascript/web/50-projects-in-50-days:node_modules/@testing-library/react",
        "//javascript/web/50-projects-in-50-days:node_modules/@types/jest",
        "//javascript/web/50-projects-in-50-days/pages",
    ],
)

jest_test(
    name = "jest_test",
    config = "//javascript/web/50-projects-in-50-days:jest_config",
    data = [
        ":specs",
        "//javascript/web/50-projects-in-50-days:node_modules/is-even",
        "//javascript/web/50-projects-in-50-days:node_modules/jest-environment-jsdom",
        "//javascript/web/50-projects-in-50-days:node_modules/jest-transform-stub",
        "//javascript/web/50-projects-in-50-days:node_modules/react",
        "//javascript/web/50-projects-in-50-days:package_json",
        "//javascript/web/50-projects-in-50-days/styles",
    ],
    node_modules = "//javascript/web/50-projects-in-50-days:node_modules",
)

eslint_bin.eslint_test(
    name = "eslint_test",
    args = [
        "--config $(location //javascript/web/50-projects-in-50-days:eslintrc)",
    ] + ["{}/{}".format(
        package_name(),
        s,
    ) for s in SRCS + SPECS],
    data = SRCS + SPECS + [
        "//javascript/web/50-projects-in-50-days:eslintrc",
        "//javascript/web/50-projects-in-50-days:node_modules/@next/eslint-plugin-next",
        "//javascript/web/50-projects-in-50-days:node_modules/eslint-config-next",
        "//javascript/web/50-projects-in-50-days:node_modules/next",
    ],
    tags = ["lint"],
)
